substrate/frame/support/test/tests/stored_ui/reject_union.stderr
error: #[stored] is only supported on structs and enums, not unions
  --> tests/stored_ui/reject_union.rs:21:1
   |
21 | pub union MyUnion {
   | ^^^
